# course-creator

./: .env.example  .gitignore  langgraph.json  main.py  pyproject.toml  requirements.txt  vercel-build.sh  vercel.json
app/: dependencies.py  main.py  utils.py
app/db/: connection.py  shemas.py
app/routes/: auth.py  courses.py  graph.py
content_creator/: agent.py  nodes.py  schemas.py  state.py
planner/: agent.py  nodes.py  schemas.py  state.py  tools.py
prerequisite_analyzer/: agent.py  nodes.py  schemas.py  state.py
