[project]
name = "course-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-mongodb>=0.2.1",
    "langsmith>=0.4.16",
    "mongoengine>=0.29.1",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.1",
    "python-dotenv>=1.1.1",
    "uuid>=1.30",
    "uvicorn>=0.35.0",
]
